--- a/programming/elm/readme.adoc
+++ b/programming/elm/readme.adoc
@@ -15,6 +15,8 @@
 * Elm is inserted as bundle into a div.
 * Elm compiler is implemented in haskell.
 * https://www.schoolofhaskell.com/user/griba/elm-from-a-haskell-perspective
+* https://gist.github.com/yang-wei/4f563fbf81ff843e8b1e[Elm Destructuring (or Pattern Matching) cheatsheet]
+* http://sporto.github.io/elm-patterns/
 ====
 
 == References
