--- a/data/postgresql/readme.adoc
+++ b/data/postgresql/readme.adoc
@@ -3,8 +3,24 @@
 :source-language: sql
 :stylesheet: ./../../style.css
 :linkcss:
+:toc:
 
-The World's Most Advanced Open Source Relational Database
+"The World's Most Advanced Open Source Relational Database"
+-- https://www.postgresql.org/
+
+.TODO
+[%collapsible]
+====
+. https://www.postgresql.org/docs/current/sql-set-constraints.html[SET CONSTRAINTS — set constraint check timing for the current transaction]
+. https://www.postgresql.org/message-id/9CEBD523D1CD4916AE46EC487323B524@eng02[ENABLE / DISABLE ALL TRIGGERS IN DATABASE]
+====
+
+[bibliography]
+== References
+
+* [[[documentation]]] https://www.postgresql.org/docs/current/[PostgreSQL Documentation]
+
+== Installation
 
 .Install postgresql on using apt
 [source, console]
@@ -14,10 +30,43 @@ sudo apt install postgresql postgresql-contrib
 [source, console]
 sudo systemctl status postgresql
 
-== Encryption
+== https://www.postgresql.org/docs/current/app-psql.html[PSQL]
+
+.Set password for user postgres
+[source, console]
+sudo passwd postgres
+
+.Login as a postgres user
+[source, console]
+su – postgres
+
+.Start psql
+[source, console]
+psql
+
+.PSQL Commands
+|===
+| `+\?+`      | Show all psql commands.
+| `+\q+`      | Exit psql shell.
+| `+\l+`      | List databases.
+| `+\c DB+`   | Connect to database DB.
+| `+\d+`      | List tables (relations).
+| `+\du+`     | List users.
+| `+\i FILE+` | Execute commands from FILE.
+| `+\! CMD+`  | Execute shell command CMD.
+|===
+
+https://www.geeksforgeeks.org/postgresql-psql-commands/
+
+== Authentication
+
+=== Encryption
 
 For compatibility with older software
 you might need to change encryption from `+scram-sha-256+` to `+md5+`.
+
+https://www.postgresql.org/docs/current/auth-pg-hba-conf.html[pg_hba.conf]::
+host-based authentication configuration file.
 
 .Set password_encryption in /etc/postgresql/VERSION/main/postgresql.conf
 [source, txt]
@@ -51,45 +100,97 @@ sudo systemctl restart postgresql
 [source, psql]
 show password_encryption;
 
-== PSQL
+== SQL Commands
 
-.Set password for user postgres
-[source, console]
-sudo passwd postgres
-
-.Login as a postgres user
-[source, console]
-su – postgres
-
-.Start psql
-[source, console]
-psql
-
-.PSQL Commands
-|===
-| `+\?+`      | Show all psql commands.
-| `+\q+`      | Exit psql shell.
-| `+\l+`      | List databases.
-| `+\c DB+`   | Connect to database DB.
-| `+\d+`      | List tables (relations).
-| `+\du+`     | List users.
-| `+\i FILE+` | Execute commands from FILE.
-| `+\! CMD+`  | Execute shell command CMD.
-|===
-
-https://www.geeksforgeeks.org/postgresql-psql-commands/
-
-== SQL
-
-.Basic Commands
+.https://www.postgresql.org/docs/current/sql-createdatabase.html[CREATE DATABASE — create a new database]
 ----
 create database DATABASE_NAME;
+----
+
+.https://www.postgresql.org/docs/current/sql-createuser.html[CREATE USER — define a new database role]
+----
 create user USER_NAME with encrypted password 'SOME PASSWORD';
-drop database DATABASE_NAME;
+----
+
+.https://www.postgresql.org/docs/current/sql-createschema.html[CREATE SCHEMA — define a new schema]
+----
+create schema SCHEMA_NAME;
+----
+
+.https://www.postgresql.org/docs/current/sql-grant.html[GRANT — define access privileges]
+----
+-- Grant user the permission to create tables.
+grant all on schema SCHEMA_NAME to USER_NAME;
+----
+
+.https://www.postgresql.org/docs/current/sql-createsequence.html[CREATE SEQUENCE — define a new sequence generator]
+----
+-- Get the current state of a sequence generator.
+select * from SEQUENCE_NAME;
+----
+
+.https://www.postgresql.org/docs/current/sql-altertable.html[ALTER TABLE — change the definition of a table]
+----
+-- Disable all trigers for table TABLE_NAME.
+alter table TABLE_NAME disable trigger all;
+----
+
+.https://www.postgresql.org/docs/current/sql-insert.html[INSERT — create new rows in a table]
+----
+insert into TABLE_NAME values
+    ('abc', 123);
+----
+
+.https://www.postgresql.org/docs/current/sql-delete.html[DELETE — delete rows of a table]
+----
+delete from TABLE_NAME;
+----
+
+https://www.postgresql.org/docs/current/sql-droptable.html[DROP TABLE — remove a table]
+
+.https://www.postgresql.org/docs/current/sql-dropschema.html[DROP SCHEMA — remove a schema]
+----
+drop schema SCHEMA_NAME cascade;
+----
+
+.https://www.postgresql.org/docs/current/sql-alterdatabase.html[ALTER DATABASE — change a database]
+----
+alter database OLD_NAME rename to NEW_NAME;
+----
+
+.https://www.postgresql.org/docs/current/sql-dropuser.html[DROP USER — remove a database role]
+----
 drop user USER_NAME;
 ----
 
-.Grant user the permission to create tables.
+.https://www.postgresql.org/docs/current/sql-dropdatabase.html[DROP DATABASE — remove a database]
 ----
-grant all on schema public to USER_NAME;
+drop database DATABASE_NAME;
+----
+
+== SQL Language
+
+"Key words and unquoted identifiers are case insensitive."
+-- https://www.postgresql.org/docs/current/sql-syntax-lexical.html#SQL-SYNTAX-IDENTIFIERS
+
+[quote,'https://www.postgresql.org/docs/current/sql-syntax-lexical.html#SQL-SYNTAX-COMMENTS']
+____
+----
+-- This is a standard SQL comment
+
+/* multiline comment
+ * with nesting: /* nested block comment */
+ */
+----
+____
+
+=== DDL
+
+* https://www.postgresql.org/docs/current/ddl-schemas.html
+
+=== Functions and Operators
+
+.https://www.postgresql.org/docs/current/functions-info.html
+----
+select current_user;
 ----
